fix: spacing for numbered list

--- a/frontend/src/components/Comment.css
+++ b/frontend/src/components/Comment.css
@@ -101,3 +101,14 @@
 
     border-left: 2px solid var(--p5-red); 
 }
+
+.comment_content ol,
+.comment_content ul {
+    margin: 0 0 1em 1.5em; 
+    padding-left: 1.5em; 
+}
+
+.comment_content li {
+    margin: 0.25em 0;     
+    padding: 0;            
+}
